2005-02-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCanvBmap.c (ConfigureBitmap, ComputeBitmapBbox): Fixed
	possible crash with disabled bmap and bbox handling [Bug 1119460]
	(BitmapToPostscript): made aware of various bitmap types
	(DisplayBitmap): remove unused fg/bgColor refs

2005-02-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: remove SHLIB_LD_FLAGS (only for AIX, inlined
	* unix/tcl.m4:      into SHLIB_LD).  Combine AIX-* and AIX-5
	* unix/configure:   branches in SC_CONFIG_CFLAGS.
	Correct gcc builds for AIX-4+ and HP-UX-11.

2005-01-31  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgs/es_ES.msg: Added more localization for Spanish
	Spanish. [Bug 1111213]

2005-01-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure, unix/tcl.m4: add solaris 64-bit gcc build
	support. [Bug 1021871]

2005-01-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXInit.c (TkpInit): set tcl_interactive to 1 to show
	console at startup instead of directly calling [console show].
	
	* unix/tcl.m4 (Darwin): fixed bug with static build linking to
	dynamic library in /usr/lib etc instead of linking to static library
	earlier in search path. [Tcl Bug 956908]
	Removed obsolete references to Rhapsody. 
	* unix/configure: autoconf-2.13

2005-01-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/menu.tcl: Reworked to make dialogs children of the
	demo widget so that they are properly visible. Issue reported by
	Keith Nash <k.j.nash@usa.net>

2005-01-14  Joe English  <jenglish@users.sourceforge.net>
	* unix/tkUnixWm.c: Sync with CVS HEAD (r1.47):
	Fixes: #959973 "wm title bug" (support Unicode titles)
	Fixes: #742882 "Potential division by zero in gridded wm geometry"
	Use Tcl_GetTime instead of TclpGetTime [#874745]
	Use Tcl_Panic() instead of "panic" [#865264]
	Fixes: #632816 "cannot remove transient"
	Fixes: #568861 "Fix for wm minsize and maxsize commands"